fix scrollbars everywhere

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -35,7 +35,7 @@
 }
 
 .module:has(table) {
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 .module-header {
