--- a/src/components/widgets/Flags.css
+++ b/src/components/widgets/Flags.css
@@ -5,7 +5,8 @@
   margin-right: 6px;
 }
 
-.flag-icon svg, .flag-icon img {
-    height:100%;
-    width: 100%;
+.flag-icon svg,
+.flag-icon img {
+  height: 100%;
+  width: 100%;
 }
