--- a/src/components/widgets/TabbedModule.css
+++ b/src/components/widgets/TabbedModule.css
@@ -10,7 +10,7 @@
   flex-direction: row;
   margin-bottom: -1px;
   z-index: 1;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .tabbed-module-tab {
