--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   cursor: auto;
   overflow-x: clip;
+  scrollbar-width: thin;
 }
 
 h1,
